Enhance algorithm to get a blur identifier + script runner.sh